Adição de enum Categoria Afição de classe Serie Alteração da DadosSerie Alteração da Principal